@@ -495,7 +495,8 @@ WandExport MagickBooleanType ConvertImageCommand(ImageInfo *image_info,
 
   MagickBooleanType
     fire,
-    pend;
+    pend,
+    respect_parenthesis;
 
   MagickStatusType
     status;
@@ -533,6 +534,7 @@ WandExport MagickBooleanType ConvertImageCommand(ImageInfo *image_info,
   NewImageStack();
   option=(char *) NULL;
   pend=MagickFalse;
+  respect_parenthesis=MagickFalse;
   status=MagickTrue;
   /*
     Parse command-line arguments.
