@@ -3,6 +3,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18132).
   * Avoid seg fault in AppendImages() when one image is in the RGB colorspace
     but the other is in the CMYK colorspace.
+  * Get rid of ''respect_parenthesis' defined but not used warnings (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=18173).
 
 2011-02-22  6.6.7-10 Glenn Randers-Pehrson <glennrp@image...>
   * Write sub-8-bit grayscale PNG images as palette-indexed PNG images.  This
